docs/hdl.ebnf
Definition ::= Directive+

Directive ::= DirectiveItem ";" "\n"

DirectiveItem ::= GateDef | LinkDef

GateDef ::= "DEFINE" GateIdentifier "AS" GateTy

GateTy ::= "not"
	| "and"
	| "or"
	| "xor"
	| "nand"
	| "nor"

LinkDef ::= "LINK" GateIdentifier "->" InputIdentifier "OF" GateIdentifier 

GateIdentifier ::= [a-z] [a-z_]+

InputIdentifier ::= [a-z]
